# JHelperXProject

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  chk.cpp  current_task.template  exp.py  geodb.html  memo.txt  run.template  submission.template  task.template
checker/: CMakeLists.txt  ac.cpp  build.py  build_run.py  checker.py  diff.py  gen.py  gen_diff.py  gen_utils.py  geodb.html  in.txt  make_tests.py  my.cpp  tqdm-test.py  utils.py
solution/: main.cpp
testrunner/: checker.cpp  checker.h  color.cpp  color.h  compare_floats.cpp  compare_floats.h  current_task.cpp  main.cpp  print_test.cpp  print_test.h  string_utils.cpp  string_utils.h  test.h  test_runner.cpp  test_runner.h  tester.cpp  tester.h
tourist-library/: GaussianElimination.hpp  SolveLinearSystem.hpp  solve_linear_system.hpp
